--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@ IDA Research Group
 <li><a href="http://cs.felk.cvut.cz/en/projects/ida">Projects</a></li>
 <li><a href="http://cs.felk.cvut.cz/en/publications/ida">Publications</a></li>
 </ul>
-<h2 id="people">People</h2>
-<ul>
-<li><a href="http://cs.felk.cvut.cz/en/people/andelmi2">Ing. Michael Anděl</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/barvijac">Ing. Jáchym Barvínek</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/cernorad">Radomír Černoch, MSc.</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/horenmar">Bc. Martin Hořeňovský</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/hubacon2">Ing. Ondřej Hubáček</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/klema">doc. Ing. Jiří Kléma, Ph.D.</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/kralvla1">Ing. Vladislav Král</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/kryskmar">Bc. Marek Kryška</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/kunguvya">Dr. Vyacheslav Kungurtsev, Ph.D.</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/malinfr1">Ing. František Malinka</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/rysavpe1">Petr Ryšavý, MSc.</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/souregus">Ing. Gustav Šourek</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/svatoma1">Ing. Martin Svatoš</a></li>
-<li><a href="http://cs.felk.cvut.cz/en/people/zelezny">prof. Ing. Filip Železný, Ph.D.</a></li>
-</ul>
+<!--
+## People
+
+ - [Ing. Michael Anděl](http://cs.felk.cvut.cz/en/people/andelmi2)
+ - [Ing. Jáchym Barvínek](http://cs.felk.cvut.cz/en/people/barvijac)
+ - [Radomír Černoch, MSc.](http://cs.felk.cvut.cz/en/people/cernorad)
+ - [Bc. Martin Hořeňovský](http://cs.felk.cvut.cz/en/people/horenmar)
+ - [Ing. Ondřej Hubáček](http://cs.felk.cvut.cz/en/people/hubacon2)
+ - [doc. Ing. Jiří Kléma, Ph.D.](http://cs.felk.cvut.cz/en/people/klema)
+ - [Ing. Vladislav Král](http://cs.felk.cvut.cz/en/people/kralvla1)
+ - [Bc. Marek Kryška](http://cs.felk.cvut.cz/en/people/kryskmar)
+ - [Dr. Vyacheslav Kungurtsev, Ph.D.](http://cs.felk.cvut.cz/en/people/kunguvya)
+ - [Ing. František Malinka](http://cs.felk.cvut.cz/en/people/malinfr1)
+ - [Petr Ryšavý, MSc.](http://cs.felk.cvut.cz/en/people/rysavpe1)
+ - [Ing. Gustav Šourek](http://cs.felk.cvut.cz/en/people/souregus)
+ - [Ing. Martin Svatoš](http://cs.felk.cvut.cz/en/people/svatoma1)
+ - [prof. Ing. Filip Železný, Ph.D.](http://cs.felk.cvut.cz/en/people/zelezny)
+-->
 </html>
