--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>
 IDA Research Group
 </title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <html>
+<header>
 <h1 id="ida-group">IDA Group</h1>
 <p>IDA is a research team at the <a href="http://cs.felk.cvut.cz">Department of Computer Science</a> of the Faculty of Electrical Engineering, CTU in Prague.</p>
-<p>In IDA, we try to make computers discover knowledge in data. To this end we develop <a href="http://en.wikipedia.org/wiki/Data_mining">data mining</a> and <a href="http://en.wikipedia.org/wiki/Machine_learning">machine learning</a> algorithms helping us detect regularities (frequent patterns, strong associations), construct predictive models, and ultimately identify the phenomenon that generated the observed data. Our expertise includes the strong paradigms of <a href="https://en.wikipedia.org/wiki/Inductive_logic_programming">inductive logic programming</a> and <a href="http://en.wikipedia.org/wiki/Relational_data_mining">relational data mining</a>, overcoming the deficiency of traditional data mining tools which constrain their analysis to a mere single table of a multi-relational database. Our main application area is bioinformatics, mainly <a href="http://en.wikipedia.org/wiki/Genomics">genomics</a>.</p>
-<h2 id="links">Links</h2>
+</header>
+<p><nav></p>
 <ul>
 <li><a href="http://cs.felk.cvut.cz/en/people/?researchTeam=3">Members</a></li>
 <li><a href="http://cs.felk.cvut.cz/en/projects/ida">Projects</a></li>
 <li><a href="http://cs.felk.cvut.cz/en/publications/ida">Publications</a></li>
 </ul>
+<p></nav></p>
+<p><main></p>
+<p>In IDA, we try to make computers discover knowledge in data. To this end we develop <a href="http://en.wikipedia.org/wiki/Data_mining">data mining</a> and <a href="http://en.wikipedia.org/wiki/Machine_learning">machine learning</a> algorithms helping us detect regularities (frequent patterns, strong associations), construct predictive models, and ultimately identify the phenomenon that generated the observed data.</p>
+<p>Our expertise includes the strong paradigms of <a href="https://en.wikipedia.org/wiki/Inductive_logic_programming">inductive logic programming</a> and <a href="http://en.wikipedia.org/wiki/Relational_data_mining">relational data mining</a>, overcoming the deficiency of traditional data mining tools which constrain their analysis to a mere single table of a multi-relational database. Our main application area is bioinformatics, mainly <a href="http://en.wikipedia.org/wiki/Genomics">genomics</a>.</p>
+<p></main></p>
 <!--
 ## People
 
