Black-and-white design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ IDA Research Group
 <html>
 <header>
 <h1 id="ida-group">IDA Group</h1>
-<p>IDA is a research team at the <a href="http://cs.felk.cvut.cz">Department of Computer Science</a> of the Faculty of Electrical Engineering, CTU in Prague.</p>
+<p>IDA is a research team at the <a href="http://cs.felk.cvut.cz">Department of Computer Science</a> of the <a href="http://fel.cvut.cz">Faculty of Electrical Engineering</a>, <a href="http://cvut.cz">CTU in Prague</a>.</p>
 </header>
 <p><nav></p>
 <ul>
