Bugfix: Layout on Android has been fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>
 IDA Research Group
 </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css"> <meta name="viewport" content="width=device-width" />
 </head>
 <html>
 <header>
