Rename the title and header

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <title>
-IDA Research Group
+The Intelligent Data Analysis lab
 </title>
 <link rel="stylesheet" type="text/css" href="style.css"> <meta name="viewport" content="width=device-width" />
 </head>
 <html>
 <header>
-<h1 id="ida-group">IDA Group</h1>
+<h1 id="the-intelligent-data-analysis-lab">The Intelligent Data Analysis lab</h1>
 <p>IDA is a research team at the <a href="http://cs.felk.cvut.cz">Department of Computer Science</a> of the <a href="http://fel.cvut.cz">Faculty of Electrical Engineering</a>, <a href="http://cvut.cz">CTU in Prague</a>.</p>
 </header>
 <p><nav></p>
